...
    <string name="sys_error_missing_credentials">No se proporcionaron credenciales de Spotify durante la compilación</string>

    <!-- Gesture actions -->
    <string name="sys_gesture_action_add_to_queue">Agregar a la cola</string>
    <string name="sys_gesture_action_play_next">Reproducir a continuación</string>
    <string name="sys_gesture_action_add_to_playlist">Agregar a una playlist</string>
    <string name="sys_gesture_action_add_to_favorites">Agregar a Me gusta</string>
    <string name="sys_gesture_action_remove_from_favorites">Quitar de Me gusta</string>
    <string name="sys_gesture_action_show_track_info">Ver información de la canción</string>
    <string name="sys_gesture_action_none">Ninguna</string>

    <!-- Gesture triggers -->
    <string name="sys_gesture_trigger_swipe_start">Al alcanzar el umbral</string>
    <string name="sys_gesture_trigger_swipe_end">Al deslizar por completo</string>
...
